Started with the anomaly detector

--- a/Electrocardiogram_anomalies.ipynb
+++ b/Electrocardiogram_anomalies.ipynb
@@ -69,41 +69,44 @@
       "metadata": {
         "id": "w9tsBoIOk95q",
         "colab_type": "code",
-        "outputId": "45a83624-51bd-4f01-9eaa-928806f3e6a4",
+        "outputId": "1c388c25-f2da-402c-f05d-0d267c4ab53e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 401
+          "height": 435
         }
       },
       "source": [
-        "!pip install wfdb"
+        "!pip install wfdb\n",
+        "!pip install padasip"
       ],
-      "execution_count": 106,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: wfdb in /usr/local/lib/python3.6/dist-packages (2.2.1)\n",
-            "Requirement already satisfied: nose>=1.3.7 in /usr/local/lib/python3.6/dist-packages (from wfdb) (1.3.7)\n",
-            "Requirement already satisfied: scipy>=0.19.0 in /usr/local/lib/python3.6/dist-packages (from wfdb) (1.3.1)\n",
-            "Requirement already satisfied: sklearn>=0.0 in /usr/local/lib/python3.6/dist-packages (from wfdb) (0.0)\n",
-            "Requirement already satisfied: numpy>=1.11.0 in /usr/local/lib/python3.6/dist-packages (from wfdb) (1.16.5)\n",
-            "Requirement already satisfied: pandas>=0.19.1 in /usr/local/lib/python3.6/dist-packages (from wfdb) (0.24.2)\n",
             "Requirement already satisfied: matplotlib>=1.5.1 in /usr/local/lib/python3.6/dist-packages (from wfdb) (3.0.3)\n",
+            "Requirement already satisfied: pandas>=0.19.1 in /usr/local/lib/python3.6/dist-packages (from wfdb) (0.24.2)\n",
+            "Requirement already satisfied: numpy>=1.11.0 in /usr/local/lib/python3.6/dist-packages (from wfdb) (1.16.5)\n",
+            "Requirement already satisfied: sklearn>=0.0 in /usr/local/lib/python3.6/dist-packages (from wfdb) (0.0)\n",
+            "Requirement already satisfied: scipy>=0.19.0 in /usr/local/lib/python3.6/dist-packages (from wfdb) (1.3.1)\n",
             "Requirement already satisfied: requests>=2.10.0 in /usr/local/lib/python3.6/dist-packages (from wfdb) (2.21.0)\n",
-            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.6/dist-packages (from sklearn>=0.0->wfdb) (0.21.3)\n",
-            "Requirement already satisfied: pytz>=2011k in /usr/local/lib/python3.6/dist-packages (from pandas>=0.19.1->wfdb) (2018.9)\n",
-            "Requirement already satisfied: python-dateutil>=2.5.0 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.19.1->wfdb) (2.5.3)\n",
+            "Requirement already satisfied: nose>=1.3.7 in /usr/local/lib/python3.6/dist-packages (from wfdb) (1.3.7)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib>=1.5.1->wfdb) (2.5.3)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib>=1.5.1->wfdb) (2.4.2)\n",
             "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib>=1.5.1->wfdb) (1.1.0)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib>=1.5.1->wfdb) (0.10.0)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib>=1.5.1->wfdb) (2.4.2)\n",
+            "Requirement already satisfied: pytz>=2011k in /usr/local/lib/python3.6/dist-packages (from pandas>=0.19.1->wfdb) (2018.9)\n",
+            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.6/dist-packages (from sklearn>=0.0->wfdb) (0.21.3)\n",
             "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests>=2.10.0->wfdb) (1.24.3)\n",
             "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests>=2.10.0->wfdb) (3.0.4)\n",
             "Requirement already satisfied: idna<2.9,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests>=2.10.0->wfdb) (2.8)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests>=2.10.0->wfdb) (2019.9.11)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/dist-packages (from python-dateutil>=2.1->matplotlib>=1.5.1->wfdb) (1.12.0)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from kiwisolver>=1.0.1->matplotlib>=1.5.1->wfdb) (41.2.0)\n",
             "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-learn->sklearn>=0.0->wfdb) (0.14.0)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/dist-packages (from python-dateutil>=2.5.0->pandas>=0.19.1->wfdb) (1.12.0)\n",
-            "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from kiwisolver>=1.0.1->matplotlib>=1.5.1->wfdb) (41.2.0)\n"
+            "Requirement already satisfied: padasip in /usr/local/lib/python3.6/dist-packages (1.1.1)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from padasip) (1.16.5)\n"
           ],
           "name": "stdout"
         }
@@ -129,8 +132,10 @@
       "source": [
         "# https://github.com/MIT-LCP/wfdb-python\n",
         "# https://wfdb.readthedocs.io/en/latest/\n",
+        "import numpy as np\n",
         "import wfdb\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "import padasip as pa"
       ],
       "execution_count": 0,
       "outputs": []
@@ -150,7 +155,7 @@
       "metadata": {
         "id": "hluVAXFOg6VQ",
         "colab_type": "code",
-        "outputId": "60eea559-5cd6-4064-bd3c-c71a7dd425b5",
+        "outputId": "319b7a93-d220-4010-9bc0-0a051bea62e1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -159,7 +164,7 @@
       "source": [
         "!git clone \"https://github.com/taomasgonzalez/Electrocardiogram-LMS.git\""
       ],
-      "execution_count": 108,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "stream",
@@ -177,7 +182,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Obteniendo los datos"
+        "## Obtención de los datos"
       ]
     },
     {
@@ -233,6 +238,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZuynzSBr7Etp",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Obtención de las señales"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -303,28 +318,28 @@
       "metadata": {
         "id": "QgddDbxMf89R",
         "colab_type": "code",
-        "outputId": "741c525a-9e26-4fea-a4fe-2fb804036608",
+        "outputId": "f0c54b8d-cea3-41d0-9b47-9eb051d632f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 286
+          "height": 0
         }
       },
       "source": [
         "plt.plot(all_signals[list(all_signals.keys())[0]]['upper'][:1000])"
       ],
-      "execution_count": 112,
+      "execution_count": 131,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7ff24713c470>]"
+              "[<matplotlib.lines.Line2D at 0x7ff24708cd68>]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 112
+          "execution_count": 131
         },
         {
           "output_type": "display_data",
@@ -359,16 +374,16 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 279
+          "height": 0
         },
-        "outputId": "45dd7a8c-eeaa-4edd-8dfe-f07cf0621a06"
+        "outputId": "0eb44bb4-a3fa-4aa5-a49a-8d92cbee7d78"
       },
       "source": [
         "anot = all_signals[list(all_signals.keys())[0]]['annot']\n",
         "attsr = vars(anot)\n",
         "print ('\\n'.join(\"%s: %s\" % item for item in attrs.items()))"
       ],
-      "execution_count": 113,
+      "execution_count": 132,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,10 +423,10 @@
       "metadata": {
         "id": "YhGYPhEMtFhb",
         "colab_type": "code",
-        "outputId": "1769561b-192c-4e96-e374-f88991d23219",
+        "outputId": "d6f7b477-e0d1-4cca-841c-c81035dd38c1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 286
+          "height": 0
         }
       },
       "source": [
@@ -422,19 +437,19 @@
         "anot = all_signals[list(all_signals.keys())[0]]['annot']\n",
         "plt.plot(anot.symbol[0:1000])"
       ],
-      "execution_count": 114,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7ff24711b0f0>]"
+              "[<matplotlib.lines.Line2D at 0x7ff246ffccc0>]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 114
+          "execution_count": 133
         },
         {
           "output_type": "display_data",
@@ -463,12 +478,77 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ymxnMPxXSEY4",
+        "id": "TUFxamWS_fhN",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "def adapt_filter(signal):\n",
+        "# https://matousc89.github.io/padasip/sources/filters/lms.html#references\n",
+        "# https://matousc89.github.io/padasip/_modules/padasip/filters/lms.html#FilterLMS\n",
+        "def lms_predictor(input_signal, desired_response, filter_size, mu=0.1, initial_w):  \n",
+        "  lms_filter = pa.filters.FilterLMS(n=filter_size, mu=mu, w=initial_w)\n",
+        "  y, e, w = lms_filter.run(d=desired_response, x=input_signal)\n",
+        "  return y ,e ,w   "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UDuzwl8xMqFS",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Implementación del detector de anomalías"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ch4Tr8N2MzAp",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Implementación del detector"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O6a2wcDRMyVi",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def detect_anomalies(input_signal):\n",
+        "  anomalies_times = []  # numero de samples en los que se detecta una anomalía\n",
+        "#   y ,e ,w = lms_predictor(input_signal, desired_response, filter_size, mu=0.1, initial_w)\n",
+        "  # hay que detectar una cota del error o la derivada o algun criterio que nos permita saber si la señal es anomala\n",
+        "  return anomalies_times"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kREjwRZVM1QK",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Cálculo de performance del detector"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Eo-f31bVNDGr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def check_detector_performance(real_anomalies, detected_anomalies):\n",
         "  pass"
       ],
       "execution_count": 0,
@@ -481,7 +561,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Probando el filtro"
+        "## Probando al detector"
       ]
     },
     {
@@ -492,8 +572,7 @@
         "colab": {}
       },
       "source": [
-        "def detect_anomalies():\n",
-        "  pass"
+        ""
       ],
       "execution_count": 0,
       "outputs": []
