minor changes, testing filter

--- a/Electrocardiogram_anomalies.ipynb
+++ b/Electrocardiogram_anomalies.ipynb
@@ -69,42 +69,42 @@
       "metadata": {
         "id": "w9tsBoIOk95q",
         "colab_type": "code",
-        "outputId": "1c388c25-f2da-402c-f05d-0d267c4ab53e",
+        "outputId": "737d22ba-99ab-4fe6-bddd-f76e1e0b11fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 435
+          "height": 0
         }
       },
       "source": [
         "!pip install wfdb\n",
         "!pip install padasip"
       ],
-      "execution_count": 125,
+      "execution_count": 151,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: wfdb in /usr/local/lib/python3.6/dist-packages (2.2.1)\n",
-            "Requirement already satisfied: matplotlib>=1.5.1 in /usr/local/lib/python3.6/dist-packages (from wfdb) (3.0.3)\n",
-            "Requirement already satisfied: pandas>=0.19.1 in /usr/local/lib/python3.6/dist-packages (from wfdb) (0.24.2)\n",
-            "Requirement already satisfied: numpy>=1.11.0 in /usr/local/lib/python3.6/dist-packages (from wfdb) (1.16.5)\n",
             "Requirement already satisfied: sklearn>=0.0 in /usr/local/lib/python3.6/dist-packages (from wfdb) (0.0)\n",
-            "Requirement already satisfied: scipy>=0.19.0 in /usr/local/lib/python3.6/dist-packages (from wfdb) (1.3.1)\n",
+            "Requirement already satisfied: pandas>=0.19.1 in /usr/local/lib/python3.6/dist-packages (from wfdb) (0.24.2)\n",
+            "Requirement already satisfied: matplotlib>=1.5.1 in /usr/local/lib/python3.6/dist-packages (from wfdb) (3.0.3)\n",
             "Requirement already satisfied: requests>=2.10.0 in /usr/local/lib/python3.6/dist-packages (from wfdb) (2.21.0)\n",
+            "Requirement already satisfied: scipy>=0.19.0 in /usr/local/lib/python3.6/dist-packages (from wfdb) (1.3.1)\n",
             "Requirement already satisfied: nose>=1.3.7 in /usr/local/lib/python3.6/dist-packages (from wfdb) (1.3.7)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib>=1.5.1->wfdb) (2.5.3)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib>=1.5.1->wfdb) (2.4.2)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib>=1.5.1->wfdb) (1.1.0)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib>=1.5.1->wfdb) (0.10.0)\n",
-            "Requirement already satisfied: pytz>=2011k in /usr/local/lib/python3.6/dist-packages (from pandas>=0.19.1->wfdb) (2018.9)\n",
+            "Requirement already satisfied: numpy>=1.11.0 in /usr/local/lib/python3.6/dist-packages (from wfdb) (1.16.5)\n",
             "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.6/dist-packages (from sklearn>=0.0->wfdb) (0.21.3)\n",
-            "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests>=2.10.0->wfdb) (1.24.3)\n",
-            "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests>=2.10.0->wfdb) (3.0.4)\n",
+            "Requirement already satisfied: python-dateutil>=2.5.0 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.19.1->wfdb) (2.5.3)\n",
+            "Requirement already satisfied: pytz>=2011k in /usr/local/lib/python3.6/dist-packages (from pandas>=0.19.1->wfdb) (2018.9)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib>=1.5.1->wfdb) (1.1.0)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib>=1.5.1->wfdb) (2.4.2)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib>=1.5.1->wfdb) (0.10.0)\n",
             "Requirement already satisfied: idna<2.9,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests>=2.10.0->wfdb) (2.8)\n",
+            "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests>=2.10.0->wfdb) (3.0.4)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests>=2.10.0->wfdb) (2019.9.11)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/dist-packages (from python-dateutil>=2.1->matplotlib>=1.5.1->wfdb) (1.12.0)\n",
-            "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from kiwisolver>=1.0.1->matplotlib>=1.5.1->wfdb) (41.2.0)\n",
+            "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests>=2.10.0->wfdb) (1.24.3)\n",
             "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-learn->sklearn>=0.0->wfdb) (0.14.0)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/dist-packages (from python-dateutil>=2.5.0->pandas>=0.19.1->wfdb) (1.12.0)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from kiwisolver>=1.0.1->matplotlib>=1.5.1->wfdb) (41.2.0)\n",
             "Requirement already satisfied: padasip in /usr/local/lib/python3.6/dist-packages (1.1.1)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from padasip) (1.16.5)\n"
           ],
@@ -155,16 +155,16 @@
       "metadata": {
         "id": "hluVAXFOg6VQ",
         "colab_type": "code",
-        "outputId": "319b7a93-d220-4010-9bc0-0a051bea62e1",
+        "outputId": "72159438-dcdb-4453-877f-b0be10802bd4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 0
         }
       },
       "source": [
         "!git clone \"https://github.com/taomasgonzalez/Electrocardiogram-LMS.git\""
       ],
-      "execution_count": 127,
+      "execution_count": 153,
       "outputs": [
         {
           "output_type": "stream",
@@ -318,7 +318,7 @@
       "metadata": {
         "id": "QgddDbxMf89R",
         "colab_type": "code",
-        "outputId": "f0c54b8d-cea3-41d0-9b47-9eb051d632f9",
+        "outputId": "1b5d01f9-41cc-4b44-89b1-b174f256eb01",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -327,19 +327,19 @@
       "source": [
         "plt.plot(all_signals[list(all_signals.keys())[0]]['upper'][:1000])"
       ],
-      "execution_count": 131,
+      "execution_count": 157,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7ff24708cd68>]"
+              "[<matplotlib.lines.Line2D at 0x7ff245586860>]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 131
+          "execution_count": 157
         },
         {
           "output_type": "display_data",
@@ -376,14 +376,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 0
         },
-        "outputId": "0eb44bb4-a3fa-4aa5-a49a-8d92cbee7d78"
+        "outputId": "87b86c42-716d-457f-f6e1-a5e2b9e8388d"
       },
       "source": [
         "anot = all_signals[list(all_signals.keys())[0]]['annot']\n",
         "attsr = vars(anot)\n",
         "print ('\\n'.join(\"%s: %s\" % item for item in attrs.items()))"
       ],
-      "execution_count": 132,
+      "execution_count": 158,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,7 +423,7 @@
       "metadata": {
         "id": "YhGYPhEMtFhb",
         "colab_type": "code",
-        "outputId": "d6f7b477-e0d1-4cca-841c-c81035dd38c1",
+        "outputId": "f99dcf48-c68f-4deb-a22d-67e67a7aab24",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -437,19 +437,19 @@
         "anot = all_signals[list(all_signals.keys())[0]]['annot']\n",
         "plt.plot(anot.symbol[0:1000])"
       ],
-      "execution_count": 133,
+      "execution_count": 159,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7ff246ffccc0>]"
+              "[<matplotlib.lines.Line2D at 0x7ff2455524a8>]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 133
+          "execution_count": 159
         },
         {
           "output_type": "display_data",
@@ -485,10 +485,10 @@
       "source": [
         "# https://matousc89.github.io/padasip/sources/filters/lms.html#references\n",
         "# https://matousc89.github.io/padasip/_modules/padasip/filters/lms.html#FilterLMS\n",
-        "def lms_predictor(input_signal, desired_response, filter_size, mu=0.1, initial_w):  \n",
+        "def lms_predictor(input_signal, desired_response, filter_size, initial_w, mu=0.1):  \n",
         "  lms_filter = pa.filters.FilterLMS(n=filter_size, mu=mu, w=initial_w)\n",
         "  y, e, w = lms_filter.run(d=desired_response, x=input_signal)\n",
-        "  return y ,e ,w   "
+        "  return y ,e ,w"
       ],
       "execution_count": 0,
       "outputs": []
@@ -522,10 +522,19 @@
       },
       "source": [
         "def detect_anomalies(input_signal):\n",
-        "  anomalies_times = []  # numero de samples en los que se detecta una anomalía\n",
-        "#   y ,e ,w = lms_predictor(input_signal, desired_response, filter_size, mu=0.1, initial_w)\n",
+        "#   anomalies_times = []  # numero de samples en los que se detecta una anomalía\n",
+        "  y ,e ,w = lms_predictor(input_signal, input_signal, \n",
+        "                          filter_size=300, initial_w=\"zeros\", mu=0.001)\n",
         "  # hay que detectar una cota del error o la derivada o algun criterio que nos permita saber si la señal es anomala\n",
-        "  return anomalies_times"
+        "  plt.figure(figsize=(15,9))\n",
+        "  plt.subplot(211);plt.title(\"Adaptation\");plt.xlabel(\"samples - k\")\n",
+        "  plt.plot(input_signal,\"b\", label=\"d - target\")\n",
+        "  plt.plot(y,\"g\", label=\"y - output\");plt.legend()\n",
+        "  plt.subplot(212);plt.title(\"Filter error\");plt.xlabel(\"samples - k\")\n",
+        "  plt.plot(10*np.log10(e**2),\"r\", label=\"e - error [dB]\");plt.legend()\n",
+        "  plt.tight_layout()\n",
+        "  plt.show()\n",
+        "#   return anomalies_times"
       ],
       "execution_count": 0,
       "outputs": []
@@ -569,13 +578,32 @@
       "metadata": {
         "id": "HDw8D2coR0vr",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 536
+        },
+        "outputId": "af6ed84b-226a-4875-9d18-021e57ae1ac5"
       },
       "source": [
-        ""
+        "detect_anomalies(all_signals[list(all_signals.keys())[0]]['upper'])"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 173,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-173-e8c1dacbf71c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdetect_anomalies\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall_signals\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall_signals\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'upper'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-172-d76d3ac31ff4>\u001b[0m in \u001b[0;36mdetect_anomalies\u001b[0;34m(input_signal)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m#   anomalies_times = []  # numero de samples en los que se detecta una anomalía\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m   y ,e ,w = lms_predictor(input_signal, input_signal, \n\u001b[0;32m----> 4\u001b[0;31m                           filter_size=300, initial_w=\"zeros\", mu=0.001)\n\u001b[0m\u001b[1;32m      5\u001b[0m   \u001b[0;31m# hay que detectar una cota del error o la derivada o algun criterio que nos permita saber si la señal es anomala\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-160-55c4984595ac>\u001b[0m in \u001b[0;36mlms_predictor\u001b[0;34m(input_signal, desired_response, filter_size, initial_w, mu)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mlms_predictor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_signal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdesired_response\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilter_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minitial_w\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmu\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0mlms_filter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpa\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilters\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFilterLMS\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfilter_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmu\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmu\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minitial_w\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m   \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlms_filter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdesired_response\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minput_signal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m,\u001b[0m\u001b[0me\u001b[0m \u001b[0;34m,\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/padasip/filters/lms.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, d, x)\u001b[0m\n\u001b[1;32m    234\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    235\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'The length of vector d and matrix x must agree.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 236\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    237\u001b[0m         \u001b[0;31m# prepare data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    238\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: object of type 'numpy.float64' has no len()"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
