--- a/Informe/conference_101719.tex
+++ b/Informe/conference_101719.tex
@@ -152,10 +152,46 @@ Numerous methods for reducing the baseline wander were tried, such as:
 In the end, the use a high-pass filter was the method that proved more successful to remove the baseline wander. 
 
 \section{Criteria for recognizing heart anomalies}
+Until now we have developed a system with several stages, first a filter to remove low frequencies trends, then a peak detector. The ARF used peak detector output and signal to build an error signal that would contain information easy to extract to detect anomalies.
+So now we will need to make an algorithm that with that signal detect electrocardiogram problems.
+\begin{figure}[H]
+\centerline{\includegraphics[scale=0.55]{imagenes/diagram}}
+\caption{Global system overview}
+\label{fig}
+\end{figure}
+To develop our algorithm we could make another peak detector, but, in practice from the studied signals we have the insight that the energy of the error signal between two peaks is more accurate to detect if there is an anomaly in that region, that is because electrocardiogram failure is more a distributed problem over the whole signal, rather than a localized event.
+
+Our algorithm checks over each region the energy of the signal and if it is sufficiently high (higher than a calibrated value by trial and error) it report a failure. To assign an epicenter (thus being able to compare our algorithm with real anomalies detected by doctors, we used a weighted average.
+
+\begin{figure}[H]
+\centerline{\includegraphics[scale=0.7]{imagenes/anomalyAlgo}}
+\caption{Anomaly detection algorithm}
+\label{fig}
+\end{figure}
+
+We obtained apparently good results in some signals of the database, but pretty bad in anothers. So we developed an Accuracy test to measure how good is our method and in which cases it tend to fail.
 
 \section{Accuracy test}
+We had data of the real heart failure times, so we needed to compare that failure times with our failure algorithm declarations. We made two tests to get accuracy information from two different points of view. First we calculated from all detected positive the amount that were calculated correctly, and the we calculated from all the real positives, how much were correctly detected. Note that two points of view are similar but complementary.
+The algorithm consisted of an iteration over the detected failure points that checked if a real failure was in range. We computed an array to optimize that calculation.
+We have run the accuracy test with all signals.
+
+\begin{figure}[H]
+\centerline{\includegraphics[scale=0.4]{imagenes/EfectividadDetectados}}
+\caption{Correctly detected/Detected}
+\label{fig}
+\end{figure}
+
+\begin{figure}[H]
+\centerline{\includegraphics[scale=0.4]{imagenes/EfectividadExistentes}}
+\caption{Failures detected/Total heart failures}
+\label{fig}
+\end{figure}
+
+These two figures are the results.
 
 \section{Analysis and validation of results}
+
 
 \begin{thebibliography}{00}
 \bibitem{b1} Nitish V. Thakor and Yi-Sheng Zhu, ``Applications of Adaptive Filtering to ECG Analysis :
